# ambit

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION_GUIDE.md  README.md  SECURITY.md  build_errors.txt  diff_output.txt  eslint.config.js  index.html  metadata.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  test_output.txt  test_output_2.txt  tsc_check.txt  tsc_output.txt  tsc_output_utf8.txt  tsconfig.json  vite.config.ts
src-tauri/: 2  Cargo.toml  build.rs  build_error.txt  build_error_v2.txt  cargo_errors.txt  check_error.txt  check_log.txt  check_output.txt  compilation_error.txt  debug_graph.txt  debug_graph_2.txt  debug_node.txt  debug_ollama.txt  debug_ollama_2.txt  debug_ollama_3.txt  debug_ollama_4.txt  debug_ollama_5.txt  debug_ollama_6.txt  debug_smz.txt  debug_trace.txt  diff.txt  full_error.txt  inspection_output.txt  inspection_output_full.txt  inspection_output_utf8.txt  inspection_output_utf8_2.txt  inspection_output_utf8_3.txt  log.txt  log2.txt  log3.txt  ollama_fail.txt  ollama_fail_2.txt  ollama_fail_3.txt  panic_graph.txt  smz_fail.txt  smz_fail_2.txt  tauri.conf.json  tauri.dev.json  test_blob_fail.txt  (+7 more)
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_data_migration.rs  db.rs  fs_commands.rs  lib.rs  metadata.rs  scanner.rs  security.rs  watcher.rs
src-tauri/src/db/: backup.rs  commands.rs  error.rs  facets.rs  migrations.rs  mod.rs  reparse.rs
src-tauri/src/db/commands/: filter_commands.rs  filter_types.rs  image_commands.rs  maintenance.rs  mod.rs  reparse_commands.rs
src-tauri/src/db/migrations/: legacy.rs  m33_denormalize.rs  m34_sync.rs  m35_thumbs.rs  m38_junctions.rs  m39_fix_backfill.rs  m40_guidance.rs  m41_cache.rs  m42_facet_guidance.rs  m43_parser_version.rs  m44_optimize_reparse.rs  m45_optimize_triggers.rs  m46_optimize_fts.rs  m47_facet_cleanup.rs  m48_original_parsed.rs  m49_removed_images.rs  m50_privacy_index.rs  m51_file_hash.rs  m52_thumbnail_privacy.rs  m53_live_facet_indexes.rs  m54_resource_junction_covering_indexes.rs  m55_manual_thumbnail_lookup_index.rs  m56_thumbnail_optimization.rs  m57_collection_thumbnail_cache.rs  m58_nullable_seed.rs  m59_canonical_resource_lookup_indexes.rs  m60_resource_inventory_cleanup.rs  m61_auxiliary_resource_inventory_cleanup.rs  m62_smart_collection_count_cache.rs  mod.rs
src-tauri/src/metadata/: a1111.rs  civitai.rs  comfyui.rs  guidance.rs  invokeai.rs  mod.rs  models.rs  parsers.rs  reparse.rs  resources.rs  thumbs_scan.rs  utils.rs
src-tauri/src/metadata/comfyui/: conditioning.rs  diagnostics.rs  eval_core.rs  eval_utils.rs  evaluator.rs  graph.rs  heuristics.rs  mod.rs  parse_helper.rs  strategies.rs  tests.rs  traversal.rs  workflow_normalizer.rs
src-tauri/src/metadata/comfyui/tests/: catalog_intake.rs  catalog_patterns.rs  complex_workflows.rs  deterministic_values.rs  diagnostics.rs  dual_model_guider.rs  false_positive_models.rs  general.rs  graph_sources.rs  ideogram_scheduler.rs  merge_precedence.rs  mod.rs  models.rs  multi_stage.rs  official_catalog.rs  official_examples.rs  output_selection.rs  prompts.rs  real_world.rs  repro_dual_ip_adapter.rs  repro_ip_adapter.rs  repro_issue_1024.rs  repro_smz_concat.rs  sampler_repro.rs  strategies.rs  subgraph_repro.rs  template_coverage.rs  test_workflow_repro.rs  ui_format.rs  workflow_subgraphs.rs
src-tauri/src/metadata/comfyui/tests/fixtures/official_catalog/: 01_get_started_text_to_image.chunks.json  02_qwen_Image_edit_subgraphed.chunks.json  Image_capybara_v0_1_text_to_image.chunks.json  README.md  coverage_manifest.json  flux_depth_lora_example.chunks.json  flux_fill_inpaint_example.chunks.json  flux_kontext_dev_basic.chunks.json  gsc_creator_2_2.chunks.json  gsc_creator_2_3.chunks.json  hidream_i1_full.chunks.json  image_anima_base_v1.chunks.json  image_anima_preview.chunks.json  image_boogu_image_0_1_edit.chunks.json  image_chroma1_radiance_text_to_image.chunks.json  image_chrono_edit_14B.chunks.json  image_ernie_image.chunks.json  image_ernie_image_turbo.chunks.json  image_firered_image_edit1_1.chunks.json  image_flux2_klein_image_edit_4b_distilled.chunks.json  image_flux2_text_to_image.chunks.json  image_ideogram4_t2i.chunks.json  image_ideogram4_t2i.expected-positive.txt  image_kandinsky5_t2i.chunks.json  image_lens_t2i.chunks.json  image_lens_turbo_t2i.chunks.json  image_longcat_text_to_image.chunks.json  image_netayume_lumina_t2i.chunks.json  image_netayume_lumina_t2i.expected-negative.txt  image_netayume_lumina_t2i.expected-positive.txt  image_newbieimage_exp0_1-t2i.chunks.json  image_newbieimage_exp0_1-t2i.expected-positive.txt  (+7 more)
src-tauri/src/scanner/: a1111.rs  core.rs  mod.rs  models.rs  traversal.rs  utils.rs
src-tauri/src/thumb/: mod.rs  optimizer.rs
(+678 files in other folders)
