[package]
name = "app"
version = "0.5.0"
default-run = "app"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["protocol-asset", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
image = "0.25"
webp = "0.3"
base64 = "0.21"
rayon = "1.8"
flate2 = "1.1.5"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
notify = { version = "8.2.0", features = ["serde"] }
regex = "1.12.2"
tokio = { version = "1", features = ["sync", "time"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "native-tls", "http2"] }
thiserror = "1"
specta = "=2.0.0-rc.22"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta-typescript = "=0.0.9"
dirs = "5"
tauri-plugin-shell = "2.3.4"
chrono = { version = "0.4.43", features = ["serde"] }
trash = "5.1.1"
once_cell = "1.21.3"
sha2 = "0.10"
hex = "0.4"
keyring = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
